# EOS-paper-reproduction

./: .gitignore  Cargo.toml  README.md  自定义电路指南.md
examples/: complete_demo.rs  eos_protocol_demo.rs  simple_usage.rs  usage_example.rs
src/: comprehensive_tests.rs  custom_circuits.rs  custom_circuits_backup.rs  custom_circuits_fixed.rs  lib.rs  main.rs
src/circuit/: common.rs  mod.rs  pc_schemes.rs
src/evaluation/: mod.rs
src/mpc/: executor.rs  mod.rs  modes.rs  secret_sharing.rs
src/piop/: consistency_checker.rs  mod.rs
src/protocol/: delegation_protocol.rs  mod.rs
