[package]
name = "eos-delegation"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-ec = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-poly-commit = { version = "0.4.0", default-features = false }
rand = "0.8"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
